[package]
name = "game"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["launchers/wasm"]

[profile.dev]
opt-level = 1

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 'z'

[dependencies]
async-std = "1.12.0"
bevy = "0.10"
bevy_prototype_lyon = "0.8.0"
image = "0.24.6"
lsystem = "0.2.1"
winit = "0.28.2"
