[package]
name = "wasm-launcher"
version = "0.1.0"
edition = "2021"
workspace = "../.."

[dependencies]
game = { path = "../.." }
bevy = "0.10.0"
web-sys = { version = "0.3.61", features = ["Document", "Window"] }
yew = { version = "0.20.0", features = ["csr"] }
stylist = { version = "0.12.0", features = ["yew_integration"] }
